<resources>
    <string name="app_name">Ivy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="genral_settng">General Settings</string>
    <string name="notify">Notifications</string>
    <string name="viw_notify">View Notification</string>
    <string name="visibility">Visible to Others</string>
    <string name="alrt_phn">Alert Type</string>
    <string name="listen_audio">Audio Clip</string>
    <string name="location_details">Location Details</string>
    <string name="recepient_alert">Recipients Details</string>
    <string name="device_notification_list">Device Notification List</string>
    <string name="cont_dis">Connection/Disconnection Actions</string>
    <string name="cont_fading">Connection Fading</string>
    <string name="sw_map">Show Map</string>
    <string name="sw_percntage">Show Percentage of left Battery</string>
    <string name="notify_alert">Show Percentage of left battery</string>
    <string name="vibrate">Vibrate</string>
    <string name="ring">Ring</string>
    <string name="blng">Blink</string>
    <string name="alrt_devc">Alert Type Device</string>
    <string name="notifi_type">Notification Type</string>
    <string name="wrt_msg">Write us a message:</string>
    <string name="email">Email Address</string>
    <string name="description">Description</string>
    <string name="progress_msg">"Please wait..."</string>
    <string name="general_settings">General Settings</string>
    <string name="notifications">Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="my_profile">My Profile</string>
    <string name="manage_contacts">Manage Contacts</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="title_activity_my_profile">My_profile</string>

    <string name="add_contacts">Add Contacts</string>
    <string name="search_from_add_user">Search from App Users</string>
    <string name="addFromPhonebook">Add from Phonebook</string>
    <string name="contactlist">Contact List</string>
    <string name="password_validation">Please enter Password.</string>
    <string name="email_validation">Please enter Email.</string>
    <string name="user_name_validation">Please enter your Name.</string>
    <string name="password_length_validation">Password length must be greater than or equal to 6 characters.</string>
    <string name="descriptionmessage">Please enter Description.</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="emergencyAlert">Emergency Alert</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="connect">Connect</string>
    <string name="already_connected">Connected</string>
    <string name="scan_header">Scanning Device</string>
    <string name="notification">Notifications</string>
    <string name="alert">My Alerts</string>
    <string name="connection_fading">Connection Fading</string>
    <string name="view_votification_general_setting">view_notification</string>
    <string name="alert_type_general_setting">alert_type_ring</string>
    <string name="left_battery_general_setting">left_battery</string>
    <string name="show_map_general_setting">show_map</string>
    <string name="connection_general_setting">connection</string>
    <string name="connection_fading_general_setting">connection_fading1</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_records_found">No devices found.</string>
    <string name="camera_permission">We can\'t get Camera permission. Please enable Camera permission.</string>
    <string name="storage_permission">We can\'t get Storage permission. Please enable Storage permission.</string>
    <string name="mic_permisison">We can\'t get Microphone permission. Please Enable Microphone permission.</string>
    <string name="phone_permission">We can\'t get Telephone permission. Please Enable Telephone permission.</string>
    <string name="contact_permission">We can\'t get Contact permission. Please Enable Contact permission.</string>
    <string name="audioSettings">Audio Settings</string>
    <string name="coming">I am coming to help you</string>
    <string name="Enable">Enable</string>
    <string name="enable_device">Enable Device</string>
    <string name="closesLocation">If Location is switched off, SOS message will send ‘Last Known Location’ to Guardians.</string>
    <string name="visibility_general_setting">set_privacy</string>
    <string name="helvthin35">Helvetica Neue CE 35 Thin.ttf</string>
    <string name="helvRoman">HelveticaNeueLTPro-Roman.otf</string>
    <string name="helv65medium">HelveticaNeueLTPro-Md.otf</string>
    <string name="helv45light">HelveticaNeueLTPro-Lt.otf</string>
    <string name="my_alerts">My Alerts</string>
    <string name="already_safe">This alert has already been either \"Marked as Safe\" or \"Cancelled\".</string>
    <string name="add_guardian"><![CDATA[You haven\'t added any Guardian yet. Go to <b>Manage Contacts</b> from <b>Settings</b> section to add Guardian contact.]]></string>
    <string name="phone_format">Contact number format should be \n[ + ] [ country code ] [ phone number ].</string>
    <string name="scroll_to_refresh">Please scroll down to refresh Phonebook list.</string>
</resources>
