<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:font="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toLeftOf="@+id/relButton"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.Custom.CustomTextView
            android:id="@+id/device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            font:customFont="@string/helv45light"
            android:textSize="24dp" />

        <com.Custom.CustomTextView
            font:customFont="@string/helv45light"
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="zfxgdzxcv"
            android:visibility="gone"
            android:textSize="12dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true">

        <com.Custom.CustomButton
            font:customFont="@string/helvRoman"
            android:id="@+id/btnConnect"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_toLeftOf="@+id/loader"
            android:background="#00000000"
            android:text="@string/connect"
            android:textColor="#26c" />

        <ImageView
            android:id="@+id/loader"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:visibility="invisible" />

    </RelativeLayout>

</RelativeLayout>