<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:background="#00000000"
    android:padding="10dp"
    android:id="@+id/parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlAboutUs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="5dp">

        <ImageView
            android:id="@+id/icon4"
            android:layout_width="35dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:src="@drawable/about_us" />

        <com.Custom.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/arrow4"
            android:layout_toRightOf="@+id/icon4"
            android:gravity="center_vertical"
            android:text="@string/about_us"
            android:textColor="@color/black"

            font:customFont="@string/helvthin35"
            android:layout_marginLeft="10dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/arrow4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:src="@drawable/icon5" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/chat_background" />


    <RelativeLayout
        android:id="@+id/rlTermsAndCondition"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="5dp">

        <ImageView
            android:id="@+id/icon6"
            android:layout_width="35dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:src="@drawable/terms_and_condition" />

        <com.Custom.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/arrow6"
            android:layout_toRightOf="@+id/icon6"
            android:gravity="center_vertical"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/black"
            font:customFont="@string/helvthin35"
            android:layout_marginLeft="10dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/arrow6"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:src="@drawable/icon5" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@color/chat_background" />

    <RelativeLayout
        android:id="@+id/rlPrivacyPolicy"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="50dp"
        android:paddingLeft="5dp">

        <ImageView
            android:id="@+id/icon8"
            android:layout_width="35dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:src="@drawable/privacy_policy" />

        <com.Custom.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/arrow8"
            android:layout_toRightOf="@+id/icon8"
            android:gravity="center_vertical"
            font:customFont="@string/helvthin35"
            android:textColor="@color/black"
            android:text="@string/privacy_policy"
            android:layout_marginLeft="10dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/arrow8"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:src="@drawable/icon5" />

    </RelativeLayout>

</LinearLayout>