<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/parent_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <include layout="@layout/header_common" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e9e9e9"
            android:orientation="vertical">

            <com.Custom.CustomTextView
                android:id="@+id/write_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                font:customFont="@string/helvRoman"
                android:text="Device Notification List"
                android:textColor="#000000"
                android:textSize="15dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <com.Custom.CustomTextView
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="FindME DEVICE 01"
                    font:customFont="@string/helv45light"
                    android:textColor="@color/hint_color"
                    android:textSize="20sp" />

                <com.Custom.CustomTextView
                    android:id="@+id/old_password"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    font:customFont="@string/helvthin35"
                    android:text="2 Min Ago"

                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color"
                    android:padding="10dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/fwd_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:src="@drawable/fwd_arrow" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>